--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     padding: 9px 20px;
 }
 
-.btn-privious{
+.btn-previous{
     background: rgba(255, 255, 255, 0.2);
     color: #ffffff;
 }
@@ -38,4 +38,10 @@ body{
     background: rgba(255, 255, 255, 0.2);
     border-radius: 15px;
 }
-
+.artist-name{
+    font-size: 20px;
+    
+}
+.single-lyrics{
+   
+}
